# EWF

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  PolynomialTest.cpp  R-plotter.r  README.md  WrightFisher.cpp  WrightFisher.h  config.cfg  configBridge.cfg  configDiffusion.cfg  configHorseCoat.cfg  main.cpp  myHelpers.cpp  myHelpers.h  run.sh  setup.py
examples/: bottleneck.data  bottleneck.demo  bottleneck.py  bridge_diffusion_sim.py  diffusion_sim.py  horse.data  horses.demo  horses.py
src/: CMakeLists.txt  EWF_pybind.cpp  Polynomial.cpp  Polynomial.h  PolynomialRootFinder.cpp  PolynomialRootFinder.h  WrightFisher.cpp  WrightFisher.h  __init__.py  myHelpers.h
